refact: changing detection consumer to queue